[package]
name = "ruuvitag-listener"
description = "Print RuuviTag measurements in Telegraf compatible format"
version = "0.5.5"
license = "MIT"
authors = ["Ville Lautanala <lautis@gmail.com>"]
repository = "https://github.com/lautis/ruuvitag-listener"
keywords = ["ruuvi", "ruuvitag", "telegraf"]
edition = "2021"

[dependencies]
btleplug = "0.11.8"
ruuvi-sensor-protocol = { git = "https://github.com/VillePe/ruuvi-sensor-protocol-rs", branch = "dataformat-v6" }
clap = { version = "3.*", features = ["derive"] }
futures = "0.3.31"
reqwest = "0.13.0-rc.1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = "debuginfo"
